--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <h1>Agustin Romano</h1>
         <img id='picMe' src="https://i.imgur.com/6IykiVH.jpg" title="source: imgur.com" alt='Image of Agustin Romano'/>
         <ul class='logos'>
-        <a href='www.linkedin.com/in/agustin-g-romano' target="_blank"><img id='linkedIn' src="https://i.imgur.com/uyuiE4u.png" title="source: imgur.com" /></a>
+        <a href='https://www.linkedin.com/in/agustin-g-romano/' target="_blank"><img id='linkedIn' src="https://i.imgur.com/uyuiE4u.png" title="source: imgur.com" /></a>
         <a href='https://github.com/agustinromano' target="_blank"><img id='github'src="https://i.imgur.com/iaPcwW2.png" title="source: imgur.com" /></a>
         </ul>
       </header>
