added some stuff

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <body>
     <header>
       <h1>Agustin Romano</h1>
+      <img src="images/profile.jpg" alt="profile picture" id="profile_pic" />
       <p>Full Stack Developer</p>
     </header>
 
@@ -17,8 +18,10 @@
         <!-- An Intro section that contains the following information:
             Who you are
             Where you are located -->
-        <p>I am a self taught developer currently enrolled in Thinkful.</p>
-        <p>I live in Frederick Maryland</p>
+        <p>
+          I am a self taught developer currently enrolled in Thinkful. I
+          currently live in Frederick, MD.
+        </p>
       </div>
       <div class="aboutMe">
         <!-- An About Me section that contains the following information:
@@ -37,6 +40,16 @@
             A link to your LinkedIn profile
             A link to your GitHub profile
             A link to your email (optional) -->
+
+      <a href="https://www.linkedin.com/in/agustin-g-romano/"
+        ><img src="images/linkedin.png" alt="linkedin"
+      /></a>
+      <a href="https://github.com/agustinromano"
+        ><img src="images/github.png" alt="github"
+      /></a>
+      <a href="mailto:agustin.g.romano@gmail.com"
+        ><img src="images/at.png" alt="email"
+      /></a>
     </footer>
     <script src="script.js"></script>
   </body>
