--- a/index.html
+++ b/index.html
@@ -4,43 +4,46 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
     <link href="style.css" rel="stylesheet" type="text/css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto+Slab&display=swap"
+      rel="stylesheet"
+    />
     <title>Portfolio Wireframe</title>
   </head>
   <body>
     <header>
-      <h1>Agustin Romano</h1>
+      <h1 class="name">Agustin Romano</h1>
       <img src="images/profile.jpg" alt="profile picture" id="profile_pic" />
       <p>Full Stack Developer</p>
     </header>
 
     <main>
       <div class="intro">
-        <!-- An Intro section that contains the following information:
-            Who you are
-            Where you are located -->
         <p>
           I am a self taught developer currently enrolled in Thinkful. I
-          currently live in Frederick, MD.
+          currently live in Frederick, MD.🦀
         </p>
       </div>
       <div class="aboutMe">
-        <!-- An About Me section that contains the following information:
-            A description that shows your passion for web development and your willingness to work with others
-            One or two sentences that describe other interests you have outside of web development -->
+        <h3>About Me</h3>
         <p>
           I have been learning code for about 2 years. I joined Thinkful to
-          improve my skills and learn to code to prepar me for a job. I love to
-          play video games and I'm big soccer(football) fan.
+          improve my skills and learn to code to prepar me for a job. On my free
+          time I love to play video games (FPS are my favorite) and to watch
+          sports.
         </p>
       </div>
     </main>
 
     <footer>
-      <!-- A Contact section that contains the following information:
-            A link to your LinkedIn profile
-            A link to your GitHub profile
-            A link to your email (optional) -->
-
       <a href="https://www.linkedin.com/in/agustin-g-romano/"
         ><img src="images/linkedin.png" alt="linkedin"
       /></a>
