--- a/index.html
+++ b/index.html
@@ -43,39 +43,43 @@
           they need assistance or get stuck.
         </p>
         <h3 class="h3_aboutMe">Interests:</h3>
-        <li class="li_interests">
-          <ul>
-            - Playing video games
-          </ul>
-          <ul>
-            - Watching sports
-          </ul>
-          <ul>
-            - Mountain biking
-          </ul>
-        </li>
+        <div>
+          <li class="li_interests">
+            <ul>
+              - Playing video games
+            </ul>
+            <ul>
+              - Watching sports
+            </ul>
+            <ul>
+              - Mountain biking
+            </ul>
+          </li>
+        </div>
       </div>
     </main>
 
     <!-- FOOTER -->
     <footer>
-      <li class="footer">
-        <ol>
-          <a href="https://www.linkedin.com/in/agustin-g-romano/"
-            ><img src="images/linkedin.png" alt="linkedin"
-          /></a>
-        </ol>
-        <ol>
-          <a href="https://github.com/agustinromano"
-            ><img src="images/github.png" alt="github"
-          /></a>
-        </ol>
-        <ol>
-          <a href="mailto:agustin.g.romano@gmail.com"
-            ><img src="images/at.png" alt="email"
-          /></a>
-        </ol>
-      </li>
+      <div>
+        <li class="footer">
+          <ol>
+            <a href="https://www.linkedin.com/in/agustin-g-romano/"
+              ><img src="images/linkedin.png" alt="linkedin"
+            /></a>
+          </ol>
+          <ol>
+            <a href="https://github.com/agustinromano"
+              ><img src="images/github.png" alt="github"
+            /></a>
+          </ol>
+          <ol>
+            <a href="mailto:agustin.g.romano@gmail.com"
+              ><img src="images/at.png" alt="email"
+            /></a>
+          </ol>
+        </li>
+      </div>
     </footer>
     <script src="script.js"></script>
   </body>
