--- a/index.html
+++ b/index.html
@@ -28,64 +28,61 @@
 
     <!-- MAIN -->
     <main>
-      <div class="intro">
-        <p>
-          I am a self taught developer currently enrolled in Thinkful. I
-          currently live in Frederick, MD.🦀
-        </p>
-      </div>
-      <div class="aboutMe">
-        <h2 class="h2_aboutMe">About Me</h2>
-        <hr />
-        <p>
-          I have been learning code for about 2 years. I love to work along side
-          people that way I can learn from them. I can also help my colleague if
-          they need assistance or get stuck.
-        </p>
-        <h3 class="h3_aboutMe">Interests:</h3>
-        <div>
-          <li class="li_interests">
-            <ul>
-              - Playing video games
-            </ul>
-            <ul>
-              - Watching sports
-            </ul>
-            <ul>
-              - Mountain biking
-            </ul>
-          </li>
+      <article>
+        <div class="intro">
+          <p>
+            I am a self taught developer currently enrolled in Thinkful. I
+            currently live in Frederick, MD.🦀
+          </p>
         </div>
-      </div>
+        <hr />
+        <div class="aboutMe">
+          <h2 class="h2_aboutMe">About Me</h2>
+          <p>
+            I have been learning code for about 2 years. I love to work along
+            side people that way I can learn from them. I can also help my
+            colleague if they need assistance or get stuck.
+          </p>
+          <h3 class="h3_aboutMe">Interests:</h3>
+          <div>
+            <ul class="li_interests">
+              <li>- Playing video games</li>
+              <li>- Watching sports</li>
+              <li>- Mountain biking</li>
+            </ul>
+          </div>
+        </div>
+        <hr />
+        <div class="contactMe">
+          <h3>Contacts</h3>
+          <ol class="footer">
+            <li>
+              <a href="https://www.linkedin.com/in/agustin-g-romano/"
+                >LinkedIn</a
+              >
+            </li>
+            <li>
+              <a href="mailto:agustin.g.romano@gmail.com">Email</a>
+            </li>
+          </ol>
+        </div>
+      </article>
     </main>
 
     <!-- FOOTER -->
     <footer>
-      <div>
-        <li class="footer">
-          <ol>
-            <a href="https://www.linkedin.com/in/agustin-g-romano/"
-              ><img src="images/linkedin.png" alt="linkedin"
-            /></a>
-          </ol>
-          <ol>
-            <a href="https://github.com/agustinromano"
-              ><img src="images/github.png" alt="github"
-            /></a>
-          </ol>
-          <ol>
-            <a href="mailto:agustin.g.romano@gmail.com"
-              ><img src="images/at.png" alt="email"
-            /></a>
-          </ol>
-        </li>
-      </div>
+      <a href="https://www.linkedin.com/in/agustin-g-romano/"
+        ><img src="images/linkedin.png" alt="linkedin"
+      /></a>
+
+      <a href="https://github.com/agustinromano"
+        ><img src="images/github.png" alt="github"
+      /></a>
+
+      <a href="mailto:agustin.g.romano@gmail.com"
+        ><img src="images/at.png" alt="email"
+      /></a>
     </footer>
     <script src="script.js"></script>
   </body>
 </html>
-
-<!-- An about me section needs to contain a description that demonstrates your willingness to work with others and a sentence or two that describes other interests outside of development.
-HTML should be semantic and valid. Take a look at the report here
-HTML markup needs to include all the required HTML elements. You missed adding h2,ul,ol and hr HTML elements in your HTML file.
-Try to add more comments in the code, as it will increase the readability and help you during the debugging process. -->
